# pricechecker

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/xml/: network_security_config.xml
mock_server/: fake_api.py  run_with_fake_api.py
pricechecker/: api_client.py  app.py  config.py  handlers.py  languages.py  models.py  utils.py
