[project]
name = "price-checker"
version = "1.0.0"
description = "Price Checker Application"
dependencies = [
    "flet",
    "python-dotenv"
]

[tool.flet]
app.module = "main"

[tool.flet.android]
# Enable cleartext traffic
permission."android.permission.INTERNET" = true
application.usesCleartextTraffic = "true"

# App name and other configurations
[tool.flet.android.manifest]
application.label = "Price Checker"
application.usesCleartextTraffic = "true" 