[project]
name = "price-checker"
version = "1.0.0"
description = "Price Checker Application"
dependencies = [
    "flet",
    "python-dotenv"
]

[tool.flet]
app.module = "main"

[tool.flet.android]
permission."android.permission.INTERNET" = true
permission."android.permission.ACCESS_NETWORK_STATE" = true
permission."android.permission.ACCESS_WIFI_STATE" = true

[tool.flet.android.manifest]
application.label = "Price Checker"
application.usesCleartextTraffic = "true"
application.networkSecurityConfig = "@xml/network_security_config" 